--- a/signUp.html
+++ b/signUp.html
@@ -34,9 +34,9 @@
                     </div>
                 </div>
                 <div class="weui_cell">
-                    <div class="weui_cell_hd"><label class="weui_label">联系方式</label></div>
+                    <div class="weui_cell_hd"><label class="weui_label">手机号码</label></div>
                     <div class="weui_cell_bd weui_cell_primary">
-                        <input class="weui_input" type="url" pattern="[0-9]*" placeholder="请输入唱吧链接">
+                        <input class="weui_input" type="url" pattern="[0-9]*" placeholder="请输入手机号码">
                     </div>
                     <div class="weui_cell_ft">
                         <i class="weui_icon_warn" style="display: none;"></i>
