加上点赞功能

--- a/signUp.html
+++ b/signUp.html
@@ -36,7 +36,7 @@
                 <div class="weui_cell">
                     <div class="weui_cell_hd"><label class="weui_label">手机号码</label></div>
                     <div class="weui_cell_bd weui_cell_primary">
-                        <input class="weui_input" type="url" pattern="[0-9]*" placeholder="请输入手机号码">
+                        <input class="weui_input" type="tel" pattern="[0-13]*" placeholder="请输入手机号码">
                     </div>
                     <div class="weui_cell_ft">
                         <i class="weui_icon_warn" style="display: none;"></i>
@@ -45,7 +45,7 @@
                 <div class="weui_cell">
                     <div class="weui_cell_hd"><label class="weui_label">唱吧链接</label></div>
                     <div class="weui_cell_bd weui_cell_primary">
-                        <input class="weui_input" type="url" pattern="[0-9]*" placeholder="请输入唱吧链接">
+                        <input class="weui_input" type="url" pattern="[a-zA-z]+://[^\s]*" placeholder="请输入唱吧链接">
                     </div>
                     <div class="weui_cell_ft">
                         <i class="weui_icon_warn" style="display: none;"></i>
