--- a/index.html
+++ b/index.html
@@ -34,20 +34,22 @@
 
 
         <section class="song-list-wrap">
+
                 <a href="http://hongyan.cqupt.edu.cn" class="weui_media_box weui_media_appmsg">
                     <div class="weui_media_hd">
                         <img class="weui_media_appmsg_thumb" src="static/img/head.png" alt="">
                     </div>
                     <div class="weui_media_bd">
                         <h4 class="weui_media_title">如果下雨的时候你拖着行李箱子站在屋檐下面那么其实我没有足够的时间找一个好一点的理由抛弃家里面的狗坐上K667次列车到你在的地方找个商店买一把伞然后给我妹妹弹吉他因为她要参加比赛所以我回不去了我也不会给你说我泡面的碗还没洗》</h4>
-                        <h4 class="weui_media_desc">咬碎咬碎</h4>
+                        <p class="weui_media_desc">咬碎咬碎
+                        </p>
+                        <div class="weui_media_desc">
+                            <i class="iconfont thumb">&#x3443;</i>
+                            <span class="thumb_num">1000</span>
+                            <span class="listen">试听</span>
+                        </div>
                     </div>
                 </a>
-                <div class="weui_cell">
-                    <i class="iconfont thumb thumb_clicked">&#x3443;</i>
-                    <span class="thumb_num">1000</span>
-                    <a class="listen" href="http://cqupt.edu.cn">试听</a>
-                </div>
 
         </section>
     </div>
