--- a/signUp.html
+++ b/signUp.html
@@ -13,51 +13,55 @@
             <img src="static/img/tupian.jpg" alt="这是一个banner">            
         </section> 
         <section class="form-wrap">
-            <form action="xxx.php" method="GET">
-                <div class="weui_cells_title">fdsjlkfjsd;kljfdsjklf</div>
+            <form id="sign-up-form" action="xxx.php" method="GET">
+                <div class="weui_cells_title">请输入个人和歌曲信息:</div>
                 <div class="weui_cell">
-                    <div class="weui_cell_hd"><label class="weui_label">姓名</label></div>
+                    <div class="weui_cell_hd">
+                        <label for="" class="weui_label">姓名</label>
+                    </div>
                     <div class="weui_cell_bd weui_cell_primary">
-                        <input class="weui_input" type="text" pattern="[0-9]*" placeholder="请输入姓名">
+                        <input class="weui_input" type="text" pattern="[0-9]*" value="" placeholder="请输入姓名">
                     </div>
                     <div class="weui_cell_ft">
-                        <i class="weui_icon_warn" style="display: none;"></i>
+                        <i class="weui_icon_warn"></i>
                     </div>
                 </div>
                 <div class="weui_cell">
                     <div class="weui_cell_hd"><label class="weui_label">歌曲名</label></div>
                     <div class="weui_cell_bd weui_cell_primary">
-                        <input class="weui_input" type="text" pattern="[0-9]*" placeholder="请输入歌曲名">
+                        <input class="weui_input" name="song-name" type="text" pattern="[0-9]*" placeholder="请输入歌曲名">
                     </div>
                     <div class="weui_cell_ft">
-                        <i class="weui_icon_warn"  style="display: none;"></i>
+                        <i class="weui_icon_warn"></i>
                     </div>
                 </div>
                 <div class="weui_cell">
                     <div class="weui_cell_hd"><label class="weui_label">手机号码</label></div>
                     <div class="weui_cell_bd weui_cell_primary">
-                        <input class="weui_input" type="tel" pattern="[0-13]*" placeholder="请输入手机号码">
+                        <input class="weui_input" type="tel" name="tel" pattern="[0-13]*" placeholder="请输入手机号码">
                     </div>
                     <div class="weui_cell_ft">
-                        <i class="weui_icon_warn" style="display: none;"></i>
+                        <i class="weui_icon_warn"></i>
                     </div>
                 </div>
                 <div class="weui_cell">
                     <div class="weui_cell_hd"><label class="weui_label">唱吧链接</label></div>
                     <div class="weui_cell_bd weui_cell_primary">
-                        <input class="weui_input" type="url" pattern="[a-zA-z]+://[^\s]*" placeholder="请输入唱吧链接">
+                        <input class="weui_input" name="song-url"  type="url" pattern="[a-zA-z]+://[^\s]*" placeholder="请输入唱吧链接">
                     </div>
                     <div class="weui_cell_ft">
-                        <i class="weui_icon_warn" style="display: none;"></i>
+                        <i class="weui_icon_warn"></i>
                     </div>
                 </div>
                 <div class="weui_btn_area">
-                    <a class="weui_btn weui_btn_primary" type="submit" id="showTooltips">确定</a>
+                    <a id="submit-btn" class="weui_btn weui_btn_primary" type="submit" id="showTooltips">确定</a>
                 </div>
             </form>
         </section>        
     </div>
     <footer>© 红岩网校工作站</footer>
     <script src="http://a.alipayobjects.com/??amui/zepto/1.1.3/zepto.js,static/fastclick/1.0.6/fastclick.min.js"></script>
+    <script>FastClick.attach(document.body);</script>
+    <script src="./static/js/signUp.js"></script>
 </body>
 </html>
