--- a/signUp.html
+++ b/signUp.html
@@ -36,6 +36,24 @@
                     </div>
                 </div>
                 <div class="weui_cell">
+                    <div class="weui_cell_hd"><label class="weui_label">歌曲名</label></div>
+                    <div class="weui_cell_bd weui_cell_primary">
+                        <input class="weui_input" name="song-name" type="text" pattern="[0-9]*" placeholder="请输入歌曲名">
+                    </div>
+                    <div class="weui_cell_ft">
+                        <i class="weui_icon_warn"></i>
+                    </div>
+                </div>
+                <div class="weui_cell">
+                    <div class="weui_cell_hd"><label class="weui_label">歌曲名</label></div>
+                    <div class="weui_cell_bd weui_cell_primary">
+                        <input class="weui_input" name="song-name" type="text" pattern="[0-9]*" placeholder="请输入歌曲名">
+                    </div>
+                    <div class="weui_cell_ft">
+                        <i class="weui_icon_warn"></i>
+                    </div>
+                </div>
+                <div class="weui_cell">
                     <div class="weui_cell_hd"><label class="weui_label">手机号码</label></div>
                     <div class="weui_cell_bd weui_cell_primary">
                         <input class="weui_input" type="tel" name="tel" pattern="[0-13]*" placeholder="请输入手机号码">
